--- a/_posts/2018-03-07-java面试知识点.md
+++ b/_posts/2018-03-07-java面试知识点.md
@@ -7,7 +7,14 @@
 <h3>一、基础篇</h3>
 
 <h4>1.1 java基础</h4>
-1.面向对象的特征：封装、继承、多态  
+
+<h2>正文</h2> 
+
+<h3>一、基础篇</h3>
+
+<h4>1.1 java基础</h4>
+
+**1.面向对象的特征：封装、继承、多态**  
 
 (1).封装：属性能够描述事物的特征，方法能够描述事物的动作。封装就是把同一类事物的共性（包括属性和方法）归到同一类中，方便使用。  
 封装的好处有：  
