--- a/_posts/2018-03-07-java面试知识点.md
+++ b/_posts/2018-03-07-java面试知识点.md
@@ -3,10 +3,9 @@
 整理：对知识做出合理的分类，设置目录，方便自己以后回顾时查看  
 
 <h2>目录</h2> 
-
-<a href="#mao">jiui</a>
-
-<h4>1.1 java基础</h4>
+- 我
+    - 我
+        ------- java
 
 <h2>正文</h2> 
 
@@ -43,4 +42,4 @@ dog.叫;
 
 
 
-<h2 id="mao">?????</h2>
+<a id="mao">?????</a>
