--- a/_posts/2018-03-07-java面试知识点.md
+++ b/_posts/2018-03-07-java面试知识点.md
@@ -1,11 +1,15 @@
 摘要：网上java面试知识杂乱而繁多，每次想看的时候总会挑挑拣拣许多时间就过去了，所以我对其进行一次学习，整理。  
+
 学习：许多的基础知识掌握并不牢固，借此机会学习一发。  
+
 整理：对知识做出合理的分类，设置目录，方便自己以后回顾时查看  
 
-<h2>目录</h2> 
-- 我
-    - 我
-        ------- java
+<h2>目录</h2>
+
+- 基础篇
+  - java基础  
+      	———— 面对对象的三大特性  
+    	———— 我的天啊
 
 <h2>正文</h2> 
 
@@ -13,33 +17,40 @@
 
 <h4>1.1 java基础</h4>
 
-**1.面向对象的特征：封装、继承、多态**  
+1.面向对象的特征：封装、继承、多态  
 
 (1).封装：属性能够描述事物的特征，方法能够描述事物的动作。封装就是把同一类事物的共性（包括属性和方法）归到同一类中，方便使用。  
+
 封装的好处有：  
+
 隐藏数据及实现细节，对每个属性加以不同的修饰符可以防止对信息的错误改动，更加安全。   
+
 降低模块间的耦合度，以及代码复用。  
+
 举个栗子：有一个类<b>车</b>，当需要使用时，只需要new一辆车，然后点击启动，前进，后退，就好。而不用知道车的轮胎多大，发动机型号，或者知道车是如何前进的。  
 
 (2).继承：Java继承是面向对象的最显著的一个特征。继承是从已有的类中派生出新的类，新的类能吸收已有类的数据属性和行为，并能扩展新的能力。JAVA不支持多继承，单继承使JAVA的继承关系很简单，一个类只能有一个父类，易于管理程序，父类是子类的一般化，子类是父类的特化（具体化)。  
+
 好处：提高代码复用率，以及易维护性。  
-举个栗子：有一个类叫**动物**，它有属性：腿的数量。有方法：可以叫。
-新建一个他的子类**猫**，猫就自动拥有了上述属性集方法，你还可以添加一个新的属性：毛的颜色。
+
+举个栗子：有一个类叫动物，它有属性：腿的数量。有方法：可以叫。
+
+新建一个他的子类猫，猫就自动拥有了上述属性集方法，你还可以添加一个新的属性：毛的颜色。
+
 这样就不需要重新写一遍腿的数量，可以叫的代码。  
 
 (3).多态：不同类对象对相同行为的不同反应，我们就把它叫做多态。 与继承相对应的是多态提供了对同一类对象差异性的处理方法，子类通过多态重写从父类继承的方法来实现子类的差异性。  
+
 直接举个栗子:  
-```Java
-class Animal{叫();}  
-class Cat enxtends Animal{叫(汪);}
-class Dog enxtends Animal{叫(喵喵喵喵);}
-Animal cat = new Cat();
-Animal dog = new Dog();
-cat.叫;
-dog.叫;
-```
+
+    class Animal{叫();}  
+    class Cat enxtends Animal{叫(汪);}
+    class Dog enxtends Animal{叫(喵喵喵喵);}
+    Animal cat = new Cat();
+    Animal dog = new Dog();
+    cat.叫;
+    dog.叫;
+
 猫和狗同样是Animal，调用同一个方法却可以得到不同的叫声。
 
-
-
-<a id="mao">?????</a>
+?????
