--- a/_posts/2018-03-07-java面试知识点.md
+++ b/_posts/2018-03-07-java面试知识点.md
@@ -8,8 +8,8 @@
 
 - 基础篇
   - java基础  
-      	———— 面对对象的三大特性  
-    	———— 我的天啊
+        - <a href="#1.1.1">面对对象的三大特性</a>
+        - <a href="#1.1.2">final, finally, finalize 的区别</a>
 
 <h2>正文</h2> 
 
@@ -17,7 +17,7 @@
 
 <h4>1.1 java基础</h4>
 
-1.面向对象的特征：封装、继承、多态  
+<p id="1.1.1">1.面向对象的特征：封装、继承、多态</p>
 
 (1).封装：属性能够描述事物的特征，方法能够描述事物的动作。封装就是把同一类事物的共性（包括属性和方法）归到同一类中，方便使用。  
 
@@ -52,5 +52,5 @@
     dog.叫;
 
 猫和狗同样是Animal，调用同一个方法却可以得到不同的叫声。
-
-?????
+<p id="1.1.2">2.final, finally, finalize 的区别</p>
+下回分解
