--- a/_posts/2018-03-10-java8学习笔记.md
+++ b/_posts/2018-03-10-java8学习笔记.md
@@ -1,7 +1,8 @@
 前些天在写代码时，突然发现某一位大佬的代码中充斥着stream来操作List，自己的for循环相比之下黯然失色，遂决定要尽快学习一下。接下来突然的一周加班阻塞了我的行程，导致今天才有时间开始。
 
 <h3>lambda表达式</h3>  
-lambda表达式允许将函数作为参数传递进方法中。lambda有什么作用呢？我目前的理解是：**make your code elegant！！！**  
+lambda表达式允许将函数作为参数传递进方法中。lambda有什么作用呢？我目前的理解是：  
+**make your code elegant！！！**  
 
 在java 8 以前，java是不允许将函数复制给变量的，比如：  
 ```
@@ -37,4 +38,21 @@ ok，做完这些我们就可以开始使用lambda了。下面的代码可以在
 
     HashMap<String, Integer> makeAHashMap(String s, int i);
   }
+```  
+使用：
 ```
+   HardInterface hardInterface = (String s, int i) -> {
+      s = s.substring(0, 1);
+      i = i + 10;
+      return new HashMap<String, Integer>() > (s,i);
+    };
+    hardInterface.makeAHashMap("huyanshi",110);
+```
+
+总结一下：  
+lambda表达式替代了原先的匿名类的作用，将  
+1.编写接口实现类，实现该接口中的方法。  
+2.new 一个实现类的实例。
+简化为：**new 一个接口的实例并将一个方法赋值给它**  
+
+Lambda结合FunctionalInterface Lib, forEach, stream()，method reference等新特性可以使代码变的更加简洁！
