--- a/_posts/2018-03-07-java面试知识点.md
+++ b/_posts/2018-03-07-java面试知识点.md
@@ -1,52 +1,58 @@
-摘要：网上java面试知识杂乱而繁多，每次想看的时候总会挑挑拣拣许多时间就过去了，所以我对其进行一次学习，整理。  
+前些天在写代码时，突然发现某一位大佬的代码中充斥着stream来操作List，自己的for循环相比之下黯然失色，遂决定要尽快学习一下。接下来突然的一周加班阻塞了我的行程，导致今天才有时间开始。
 
-学习：许多的基础知识掌握并不牢固，借此机会学习一发。  
+<h3>lambda表达式</h3>  
+lambda表达式允许将函数作为参数传递进方法中。lambda有什么作用呢？我目前的理解是：  
+**make your code elegant！！！**  
 
-整理：对知识做出合理的分类，设置目录，方便自己以后回顾时查看  
+在java 8 以前，java是不允许将函数复制给变量的，比如：  
+```
+lambda = public void print(String s){
+	System.out.println(s);
+} 
+```  
+这种操作是不允许的。  
 
-<h2>目录</h2>
+那么在java 8 中，这个lambda是什么类型呢？是一个“函数型接口”，函数型接口与普通接口最大的区别就是函数型接口只有一个函数需要被实现。为了防止后续人员对函数型接口进行添加，java8新增了@FunctionalInterface注解，可以防止函数型接口被添加函数（注意：default和static方法并不受约束，仍旧可以添加使用）。  
+像这样：  
+```
+  @FunctionalInterface
+  public interface MyLambdaInterface {
+    void doSomething(String s);
+  }
+```
+ok，做完这些我们就可以开始使用lambda了。下面的代码可以在一个方法中打印字符车。  
+```
+	MyLambdaInterface lambdaInterface = (e) -> System.out.println(e);
+    lambdaInterface.doSomething("huyashi is good！");
+```
+这样的情况下已经比java7及以前简洁了太多太多。不信你可以自己用java7实现一个类似的效果。  
 
-- 基础篇
-  - java基础  
-        - <a href="#1.1.1">面对对象的三大特性</a>  
-        - <a href="#1.1.2">final, finally, finalize 的区别</a>
+但是lambda就仅止于此吗？NO！如果你有5个方法，每个方法都是接受String而返回void，每个方法仅仅使用一次。java7却要求定义5个不同的接口实现类，而lambda只需要5行代码。  
 
-<h2>正文</h2> 
+上述情况只是lambda的最简单使用姿势，你当然可以定义负责的接口，如多个参数，具有返回值，只需要在赋值lambda时用花括号将函数的实现括起来就好。
 
-<h3 id ='1'>一、基础篇</h3>
+一个简单的小栗子:  
+```
+@FunctionalInterface
+  public interface HardInterface {
 
-<h4>1.1 java基础</h4>
+    String  makeAHashMap(String s, int i);
+  }
+```  
+使用：
+```
+    HardInterface hardInterface = (String s, int i) -> {
+      s = s.substring(0, 1);
+      i = i + 10;
+      return s+i;
+    };
+    hardInterface.makeAHashMap("huyanshi",110);
+```
 
-<p id="1.1.1">1.面向对象的特征：封装、继承、多态</p>
+总结一下：  
+lambda表达式替代了原先的匿名类的作用，将  
+1.编写接口实现类，实现该接口中的方法。  
+2.new 一个实现类的实例。
+简化为：**new 一个接口的实例并将一个方法赋值给它**  
 
-(1).封装：属性能够描述事物的特征，方法能够描述事物的动作。封装就是把同一类事物的共性（包括属性和方法）归到同一类中，方便使用。  
-
-封装的好处有：  
-隐藏数据及实现细节，对每个属性加以不同的修饰符可以防止对信息的错误改动，更加安全。   
-降低模块间的耦合度，以及代码复用。  
-
-举个栗子：有一个类<b>车</b>，当需要使用时，只需要new一辆车，然后点击启动，前进，后退，就好。而不用知道车的轮胎多大，发动机型号，或者知道车是如何前进的。  
-
-(2).继承：Java继承是面向对象的最显著的一个特征。继承是从已有的类中派生出新的类，新的类能吸收已有类的数据属性和行为，并能扩展新的能力。JAVA不支持多继承，单继承使JAVA的继承关系很简单，一个类只能有一个父类，易于管理程序，父类是子类的一般化，子类是父类的特化（具体化)。  
-
-好处：提高代码复用率，以及易维护性。  
-
-举个栗子：有一个类叫动物，它有属性：腿的数量。有方法：可以叫。
-新建一个他的子类猫，猫就自动拥有了上述属性集方法，你还可以添加一个新的属性：毛的颜色。
-这样就不需要重新写一遍腿的数量，可以叫的代码。  
-
-(3).多态：不同类对象对相同行为的不同反应，我们就把它叫做多态。 与继承相对应的是多态提供了对同一类对象差异性的处理方法，子类通过多态重写从父类继承的方法来实现子类的差异性。  
-
-直接举个栗子:  
-
-    class Animal{叫();}  
-    class Cat enxtends Animal{叫(汪);}
-    class Dog enxtends Animal{叫(喵喵喵喵);}
-    Animal cat = new Cat();
-    Animal dog = new Dog();
-    cat.叫;
-    dog.叫;
-
-猫和狗同样是Animal，调用同一个方法却可以得到不同的叫声。
-<p id="1.1.2">2.final, finally, finalize 的区别</p>
-下回分解
+Lambda结合FunctionalInterface Lib, forEach, stream()，method reference等新特性可以使代码变的更加简洁！
