--- a/_posts/2018-03-07-java面试知识点.md
+++ b/_posts/2018-03-07-java面试知识点.md
@@ -36,7 +36,7 @@ ok，做完这些我们就可以开始使用lambda了。下面的代码可以在
 @FunctionalInterface
   public interface HardInterface {
 
-    String  makeAHashMap(String s, int i);
+    String  add(String s, int i);
   }
 ```  
 使用：
@@ -46,7 +46,7 @@ ok，做完这些我们就可以开始使用lambda了。下面的代码可以在
       i = i + 10;
       return s+i;
     };
-    hardInterface.makeAHashMap("huyanshi",110);
+    hardInterface.add("huyanshi",110);
 ```
 
 总结一下：  
