--- a/_posts/2018-03-10-java8学习笔记.md
+++ b/_posts/2018-03-10-java8学习笔记.md
@@ -36,23 +36,23 @@ ok，做完这些我们就可以开始使用lambda了。下面的代码可以在
 @FunctionalInterface
   public interface HardInterface {
 
-    HashMap<String, Integer> makeAHashMap(String s, int i);
+    String  add(String s, int i);
   }
 ```  
 使用：
 ```
-   HardInterface hardInterface = (String s, int i) -> {
+    HardInterface hardInterface = (String s, int i) -> {
       s = s.substring(0, 1);
       i = i + 10;
-      return new HashMap<String, Integer>() > (s,i);
+      return s+i;
     };
-    hardInterface.makeAHashMap("huyanshi",110);
+    hardInterface.add("huyanshi",110);
 ```
 
 总结一下：  
 lambda表达式替代了原先的匿名类的作用，将  
 1.编写接口实现类，实现该接口中的方法。  
-2.new 一个实现类的实例。  
+2.new 一个实现类的实例。
 简化为：**new 一个接口的实例并将一个方法赋值给它**  
 
 Lambda结合FunctionalInterface Lib, forEach, stream()，method reference等新特性可以使代码变的更加简洁！
