--- a/_posts/2018-03-10-java8学习笔记.md
+++ b/_posts/2018-03-10-java8学习笔记.md
@@ -63,7 +63,7 @@ java8的接口中可以有default方法及static方法。
 静态方法必须有实现。但是实现此接口的类无法实现静态方法。
 
 举一个小栗子：  
-```java  
+<pre> 
 public class DefaultInterfaceTest {
 
   private static final LoggerSimpleFromPfliu log = new LoggerSimpleFromPfliu(
@@ -104,8 +104,7 @@ public class DefaultInterfaceTest {
     }
   }
 }
-
-```
+</pre>  
 程序执行结果是：  
 static  
 abstract  
