--- a/_posts/2018-03-07-java面试知识点合集.md
+++ b/_posts/2018-03-07-java面试知识点合集.md
@@ -2,10 +2,10 @@
 学习：许多的基础知识掌握并不牢固，借此机会学习一发。  
 整理：对知识做出合理的分类，设置目录，方便自己以后回顾时查看
 <h2>目录</h2>
- - 基础篇
-    - Java基础
-        <a href="#1.1.1">1.面对对象的三大特性</a>
-        <a href="#1.1.2">final<a>
+- 基础篇  
+	- Java基础  
+			<a href="#1.1.1">1.面对对象的三大特性</a>  
+			<a href="#1.1.2">final</a>
 <h2>正文</h2>
 <h3>一、基础篇</h3>
 <h4>1.1 java基础</h4>
@@ -30,7 +30,8 @@
 (3).多态：不同类对象对相同行为的不同反应，我们就把它叫做多态。 与继承相对应的是多态提供了对同一类对象差异性的处理方法，子类通过多态重写从父类继承的方法来实现子类的差异性。  
 
 直接举个栗子：  
-```class Aninal{ 叫；}//叫是动物的一个方法  
+<pre>
+class Aninal{ 叫；}//叫是动物的一个方法  
 class 猫 extend Animal{叫；}
 class 狗 extend Animal{叫；}
 
@@ -38,5 +39,6 @@ Animal 狗 = new 狗();
 Animal 猫 = new 猫();  
 
 狗.叫();  
-猫.叫();```
+猫.叫();
+</pre>  
 猫和狗同样是Animal，调用同一个方法却可以得到不同的叫声。
