--- a/_posts/2018-03-10-java8学习笔记.md
+++ b/_posts/2018-03-10-java8学习笔记.md
@@ -4,27 +4,25 @@
 lambda表达式允许将函数作为参数传递进方法中。lambda有什么作用呢？我目前的理解是：  
 **make your code elegant！！！**  
 
-在java 8 以前，java是不允许将函数复制给变量的，比如：  
-```java
-lambda = public void print(String s){
-	System.out.println(s);
-} 
-```  
+在java 8 以前，java是不允许将函数复制给变量的，比如： 
+ 
+		lambda = public void print(String s){
+		System.out.println(s);
+		} 
 这种操作是不允许的。  
 
 那么在java 8 中，这个lambda是什么类型呢？是一个“函数型接口”，函数型接口与普通接口最大的区别就是函数型接口只有一个函数需要被实现。为了防止后续人员对函数型接口进行添加，java8新增了@FunctionalInterface注解，可以防止函数型接口被添加函数（注意：default和static方法并不受约束，仍旧可以添加使用）。  
 像这样：  
-```java
-  @FunctionalInterface
-  public interface MyLambdaInterface {
-    void doSomething(String s);
-  }
-```
+	
+	  @FunctionalInterface
+	  public interface MyLambdaInterface {
+	    void doSomething(String s);
+	  }
+	
 ok，做完这些我们就可以开始使用lambda了。下面的代码可以在一个方法中打印字符车。  
-```java
-    MyLambdaInterface lambdaInterface = (e) -> System.out.println(e);
-    lambdaInterface.doSomething("huyashi is good！");
-```
+
+	MyLambdaInterface lambdaInterface = (e) -> System.out.println(e);
+	lambdaInterface.doSomething("huyashi is good！");
 这样的情况下已经比java7及以前简洁了太多太多。不信你可以自己用java7实现一个类似的效果。  
 
 但是lambda就仅止于此吗？NO！如果你有5个方法，每个方法都是接受String而返回void，每个方法仅仅使用一次。java7却要求定义5个不同的接口实现类，而lambda只需要5行代码。  
@@ -32,21 +30,19 @@ ok，做完这些我们就可以开始使用lambda了。下面的代码可以在
 上述情况只是lambda的最简单使用姿势，你当然可以定义负责的接口，如多个参数，具有返回值，只需要在赋值lambda时用花括号将函数的实现括起来就好。
 
 一个简单的小栗子:  
-```java
-@FunctionalInterface
-  public interface HardInterface {
-    String  add(String s, int i);
-  }
-```  
+	
+	@FunctionalInterface
+	  public interface HardInterface {
+	    String  add(String s, int i);
+	  }
 使用：
-```java
-    HardInterface hardInterface = (String s, int i) -> {
-      s = s.substring(0, 1);
-      i = i + 10;
-      return s+i;
-    };
-    hardInterface.add("huyanshi",110);
-```
+
+	 HardInterface hardInterface = (String s, int i) -> {
+	      s = s.substring(0, 1);
+	      i = i + 10;
+	      return s+i;
+	    };
+	    hardInterface.add("huyanshi",110);
 
 总结一下：  
 lambda表达式替代了原先的匿名类的作用，将  
@@ -63,52 +59,53 @@ java8的接口中可以有default方法及static方法。
 静态方法必须有实现。但是实现此接口的类无法实现静态方法。
 
 举一个小栗子：  
-<pre> 
-public class DefaultInterfaceTest {
 
-  private static final LoggerSimpleFromPfliu log = new LoggerSimpleFromPfliu(
-      DefaultInterfaceTest.class);
+	public class DefaultInterfaceTest {
+	
+	  private static final LoggerSimpleFromPfliu log = new LoggerSimpleFromPfliu(
+	      DefaultInterfaceTest.class);
+	
+	
+	  public static void main(String args[]) {
+	    TestInterface.staticMethod();
+	    DefaultInterfaceTest defaultInterfaceTest = new DefaultInterfaceTest();
+	    defaultInterfaceTest.test();
+	
+	  }
+	
+	  private void test() {
+	    TestClass testClass = new TestClass();
+	    testClass.abstractmethod();
+	    testClass.defaultMethod();
+	
+	
+	  }
+	  
+	  private class TestClass implements TestInterface {
+	
+	   	@Override
+	    public void abstractmethod() {
+	      log.debug("abstract");
+	    }
+	
+	  }
+	
+	  public interface TestInterface {
+	    void abstractmethod();
+	    default void defaultMethod() {
+	      log.debug("default");
+	    }
+	    static void staticMethod() {
+	      log.debug("static");
+	    }
+	  }
+	}
+	 
 
-
-  public static void main(String args[]) {
-    TestInterface.staticMethod();
-    DefaultInterfaceTest defaultInterfaceTest = new DefaultInterfaceTest();
-    defaultInterfaceTest.test();
-
-  }
-
-  private void test() {
-    TestClass testClass = new TestClass();
-    testClass.abstractmethod();
-    testClass.defaultMethod();
-
-
-  }
-  
-  private class TestClass implements TestInterface {
-
-   	@Override
-    public void abstractmethod() {
-      log.debug("abstract");
-    }
-
-  }
-
-  public interface TestInterface {
-    void abstractmethod();
-    default void defaultMethod() {
-      log.debug("default");
-    }
-    static void staticMethod() {
-      log.debug("static");
-    }
-  }
-}
-</pre>  
 程序执行结果是：  
 static  
 abstract  
 default  
 
-<h3>wodetim</h3>
+<h3>xixi</h3>
 <code></code>
