http协议常见问题

--- a/_posts/2018-03-07-java-面试知识点合集.md
+++ b/_posts/2018-03-07-java-面试知识点合集.md
@@ -2,12 +2,16 @@
 学习：许多的基础知识掌握并不牢固，借此机会学习一发。  
 整理：对知识做出合理的分类，设置目录，方便自己以后回顾时查看
 <h2>目录</h2>
+
  - 基础篇
-    - Java基础  
-         <a href="#1.1.1">1.面对对象的三大特性</a>  
-         <a href="#1.1.2">2.final，finally，finalize的区别</a>  
-         <a href="#1.1.3">3.Exception、Error、运行时异常与一般异常有何异同</a>  
-         <a href="#1.1.4">4.请写出你最常遇到的5种运行时异常</a>
+    - Java基础
+    	- <a href="#1.1.1">1.面对对象的三大特性</a>  
+    	-  <a href="#1.1.2">2.final，finally，finalize的区别</a>  
+     	- <a href="#1.1.3">3.Exception、Error、运行时异常与一般异常有何异同</a>  
+     	- <a href="#1.1.4">4.请写出你最常遇到的5种运行时异常</a>  
+     	- <a href="#1.1.5">5.java的基础类型</a>  
+     	- <a href="#1.1.6">6.Integer和int的区别，Integer的缓存范围</a>  
+     	- <a href="#1.1.7">7.包装类，装箱与拆箱</a>
 
 
 <h2>正文</h2>
@@ -84,4 +88,130 @@ RuntimeException：运行时异常，RuntimeException及其子类，这些异常
 - IllegalArgumentException - 传递非法参数异常。  
 - ArithmeticException - 算术运算异常  
 - IndexOutOfBoundsException - 下标越界异常  
-- NumberFormatException当应用程序试图将字符串转换成一种数值类型，但该字符串不能转换为适当格式时，抛出该异常.(属于IllegalArhumentException的子类)
+- NumberFormatException当应用程序试图将字符串转换成一种数值类型，但该字符串不能转换为适当格式时，抛出该异常.(属于IllegalArhumentException的子类)      
+
+<h5 id="1.1.5">5.java的基础类型</h5>  
+java的基础类型，其实多用一点很自然的就记住了，但是如果你还没有记住，建议在面试前一定要背过去，因为如果这个都不会，真的是很尴尬。。  
+整型：byte，int，short，long。  
+浮点型：float，double。  
+字符：char。  
+布尔：boolean。  
+
+<h5 id="1.1.6">6.Integer和int的区别，Integer的缓存范围</h5>
+在java中，有八种基础类型，详见上一条。  
+而java是一种面对对象的语言，很多时候不可以用基础数据类型而需要一个类。因此加入了Integer，Boolean等包装类。  
+区别：  
+1.int是一个基础数据类型，Integer是一个包装类，是一个对象。  
+2.类初始化时，int的值为0，Integer的值为null。  
+当你只是需要一个值来进行一些加减乘除的运算及作为参数传递一下，那么可以定义为int，如果需要对其做一些类型的转换，尽量定义为一个Integer，因为java的对象会继承以及拥有一些自己的方法，使用起来更加方便。  
+<br>
+Integer的缓存问题：  
+
+```java
+ public static void compare1(){
+         Integer i1 = 127, i2 = 127, i3 = 128, i4 = 128;
+         System.out.println(i1  == i2);
+         System.out.println(i1.equals(i2));
+         System.out.println(i3  == i4);
+         System.out.println(i3.equals(i4));
+     }
+```  
+输出结果为：  
+true，true，false，true。  
+
+当时用Integer i= 127这种操作时，会进行装箱操作，即发生Integer i = Integer.valueOf(127).
+当值处于（-128，127）之间时，不会去重新new一个Integer，而是从缓存中取。因此在此范围之内的Integer，使用  == 判断时也会返回true，因为他们本身就是同一个对象(缓存中)。而equal方法就是判断其值是否相等，返回true，并没有问题。  
+为了避免造成错误，可以使用Integer i = new Integer(127),这样就不会出现因为java缓存导致的问题。  
+
+<h5 id="1.1.7">7.包装类，装箱与拆箱</h5>
+包装类：java是一个面对对象的语言，但是java中的基本数据类型却不是面对对象的，为了弥补这一点，对每一个基本数据类型设计了一个与之相对应的类型，这个类型就是包装类。八种基本数据类型与对应的包装类为：  
+
+- int ->Integer  
+- short -> Short
+- long -> Long
+- byte -> Byte
+- float -> Float
+- double -> Double
+- char -> Character
+- boolean -> Boolean  
+  
+**包装类共同的方法**  
+
+- 带有基本值参数并创建包装类对象的构造函数。如利用Integer包装类创建对象，Integer obj=new Integer(145);
+- 带有字符串参数并创建包装类对象的构造函数.如：new Integer(“-45.36”);
+- 可生成对象基本值的typeValue方法，如：obj.intValue();
+- 将字符串转换为基本值的parseType方法，如：Integer.parseInt(args[0]);
+- 生成哈稀表代码的hashCode方法，如：obj.hasCode();
+- 对同一个类的两个对象进行比较的equals()方法，如：obj1.eauqls(obj2);
+- 生成字符串表示法的toString()方法，如：obj.toString().    
+
+**装箱与拆箱**  
+
+装箱是将基本类型转换为对应的包装类,拆箱反之。  
+
+在java1.5之前，如果你需要将一个基本类型放入集合(Collection)中，需要先将其转化为对象，然后将转化后的对象放入集合中，这样操作十分繁琐。因此，在java1.5中引入了自动装箱与拆箱操作。  
+
+何时发生自动装箱与拆箱？  
+
+当需要的是一个对象而传入的是一个基本类型时(或者反之)。  
+
+最经典的就是在处理Collection时：  
+
+```java
+	//在这个过程中发生了装箱与拆箱
+    List<Integer> integerList = new ArrayList<>();
+    integerList.add(3);//autoboxing
+    int i = integerList.get(0);//unboxing
+```
+此外还有  
+赋值时：
+
+```java
+Integer i = 3;
+int j = i;
+```  
+
+方法调用时：  
+
+```java
+	//尽量自己注意声明类型，这种代码会产生很多不必要的装箱与拆箱，耗费资源，降低程序性能。
+  show(3);
+  
+  int show(Integer i ){
+    return i;
+  }
+```
+
+
+在自动装箱与拆箱的过程中，有哪些问题需要注意呢？  
+
+1.equals 与 == 的区别。  
+equals方法是可以重写的，也就是说具体怎么定义‘相等’可以由你设定，而 == 用在基础类型是判定其值是否相等，用在对象是判定比较双方是否为同一个对象。**这里需要注意一下Integer的缓存问题，详见<a href="#1.1.6">Integer的缓存问题</a>**  
+
+2.拆箱过程中的空指针问题  
+
+当将包装类与原始类型比较时，如果未初始化包装类，在拆箱过程中调用obj.xxxvalueU时会发生空指针异常。
+
+```java
+  public static Integer i ;
+  	//在方法中，方法省去了。
+    if (i > 10){
+      System.out.println("huyanshi");
+    }
+```
+以上代码运行时会抛出NullPointException。  
+
+3.创建很多无用的对象，为GC增加压力。
+
+```java
+Integer sum = 0;
+
+ for(int i=1000; i<5000; i++){
+
+   sum+=i;
+
+}
+```
+这个操作中，+操作并不适用于Integer对象，因此会进行自动拆箱，而拿到+的结果后又会装箱为Integer。在这个过程中，会创建几千个无用的对象，降低程序的性能。因此应尽量避免。  
+
+总的来说，自动装箱和拆箱着实为开发者带来了很大的方便，但是在使用时也是需要格外留意，避免引起出现文章提到的问题。
