--- a/分类查看.md
+++ b/分类查看.md
@@ -1,17 +1,17 @@
 ---
 layout: page
 title: "分类查看"
-description: "代表作"
+description: "按照分类寻找想要的文章吧！"
 header-img: "img/zhihu.jpg"
 ---
 
 <div>
 <hr>
 {% for category in site.categories %}
-<h2>{{ category | first }}</h2> </span>{{ category | last | size }}</span> 
+<h2>{{ category | first }}</h2> ({{ category | last | size }})
 <ul class="arc-list">
 {% for post in category.last %} 
-<li>{{ post.date | date:"%d/%m/%Y"}}<a href="{{ post.url }}">{{ post.title }}</a></li>
+<li>{{ post.date | date:"%Y%m/%d     "}}<a href="{{ post.url }}">{{ post.title }}</a></li>
 {% endfor %}
 </ul> 
 {% endfor %}
