--- a/分类查看.md
+++ b/分类查看.md
@@ -8,7 +8,7 @@ header-img: "img/zhihu.jpg"
 <div>
 <hr>
 {% for category in site.categories %}
-<h4>{{ category | first }}  <font color="red">({{ category | last | size }})</font></h4> 
+<h4>{{ category | first }}  <font color="#EE7700">({{ category | last | size }})</font></h4> 
 <ul class="arc-list">
 {% for post in category.last %} 
 <li>{{ post.date | date:"%Y%m/%d     "}}<a href="{{ post.url }}"><font color="green">{{ post.title }}</font></a></li>
