--- a/4.搜索.md
+++ b/4.搜索.md
@@ -1,8 +1,8 @@
 ---
 layout: page
 title: "搜索"
-description: "哈哈，你找到了我的文章基因库"  
-header-img: "img/semantic.jpg"  
+description: "关键字查找文章"
+header-img: "img/semantic.jpg"  
 ---
 
 ##本页使用方法
