--- a/3.关于.md
+++ b/3.关于.md
@@ -5,13 +5,16 @@ description: "呼延十博客的介绍"
 header-img: "img/green.jpg"
 ---
 
-起初我是不写博客的，工作中的许多知识，发现都是用备忘录随手记载。  
-用备忘录确实很方便，因为我完全不用关心title，结构，内容。因为只有自己可能会去看所以没有那么多的仪式。  
-但是正因为如此，我记录的杂乱无章，自己去找一次也十分吃力。到后来记录也真的只是‘记录’了，从来不会去看也不会整理。  
+起初我是不写博客的，工作中的许多知识，发现都是用备忘录随手记载。  
+
+用备忘录确实很方便，因为我完全不用关心title，结构，内容。因为只有自己可能会去看所以没有那么多的仪式。  
+
+但是正因为如此，我记录的杂乱无章，自己去找一次也十分吃力。到后来记录也真的只是‘记录’了，从来不会去看也不会整理。  
+
 偶然间写了一篇博客，我发现在写的过程中，因为考虑到可能会有人看到，所以我会去努力的保证结构易读，内容正确。而在这个过程中我自己也受益匪浅。  
 所以搭建了这个博客。为工作，生活记录所用。  
 
-博客的内容大部分都是一些只有程序猿才会用到的知识，而由于我是java服务端开发所以内容可能也不适用于所有程序员。但是，当我工作中碰到一些有趣，有用的知识or技巧，我仍旧会记录在这里，方便自己回顾，也方便大家查看少走弯路。也算是为开源世界做一点点自己的贡献(脸呢？？？).  
+博客的内容大部分都是一些只有程序猿才会用到的知识，而由于我是java服务端开发所以内容可能也不适用于所有程序员。但是，当我工作中碰到一些有趣，有用的知识or技巧，我仍旧会记录在这里，方便自己回顾，也方便大家查看少走弯路。也算是为开源世界做一点点自己的贡献(脸呢？？？)。
 
 
 **声明：我会尽力的去保证所写内容的完整性，正确性。但是由于我也不是啥都会的大佬，在写作过程中难免会写出一些不清楚，甚至错误的地方。如果您发现有任何不合适的地方，请在对应文章下评论，或者发送邮件至我的邮箱，我将尽快给您答复并修正。谢谢！**
@@ -21,9 +24,9 @@ header-img: "img/green.jpg"
 
 QQ:971658291  
 
-邮箱：huyanshi2580@gmail.com    
+邮箱： huyanshi2580@gmail.com    
 
-github:hublanker  
+Github: hublanker  
 
 
 
