--- a/2.时间归档.md
+++ b/2.时间归档.md
@@ -11,11 +11,11 @@ header-img: "img/orange.jpg"
   {% capture y %}{{post.date | date:"%Y"}}{% endcapture %}
   {% if year != y %}
     {% assign year = y %}
-    <li class="listing-seperator">{{ y }}</li>
+    <B><li class="listing-seperator">{{ y }}</li></B>
   {% endif %}
   <li class="listing-item">
     <time datetime="{{ post.date | date:"%Y-%m-%d" }}">{{ post.date | date:"%Y-%m-%d" }}</time>
-    <a href="{{ post.url }}" title="{{ post.title }}">{{ post.title }}</a>
+    <a href="{{ post.url }}" title="{{ post.title }}">  <font class="green">{{ post.title }}</font></a>
   </li>
 {% endfor %}
 </ul>
