--- a/2.时间归档.md
+++ b/2.时间归档.md
@@ -12,10 +12,11 @@ header-img: "img/orange.jpg"
   {% if year != y %}
     {% assign year = y %}
     <B><li class="listing-seperator">{{ y }}</li></B>
+  <br/>
   {% endif %}
   <li class="listing-item">
     <time datetime="{{ post.date | date:"%Y-%m-%d" }}">{{ post.date | date:"%Y-%m-%d" }}</time>
-    <a href="{{ post.url }}" title="{{ post.title }}">  <font class="green">{{ post.title }}</font></a>
+    <a href="{{ post.url }}" title="{{ post.title }}">  <font color="green">{{ post.title }}</font></a>
   </li>
 {% endfor %}
 </ul>
