--- a/2.时间归档.md
+++ b/2.时间归档.md
@@ -6,17 +6,30 @@ header-img: "img/orange.jpg"
 ---
 
 
-<ul class="listing">
-{% for post in site.posts %}
-  {% capture y %}{{post.date | date:"%Y"}}{% endcapture %}
-  {% if year != y %}
-    {% assign year = y %}
-    <B><li class="listing-seperator">{{ y }}</li></B>
-  <br/>
-  {% endif %}
-  <li class="listing-item">
-    <time datetime="{{ post.date | date:"%Y-%m-%d" }}">{{ post.date | date:"%Y-%m-%d" }}</time>
-    <a href="{{ post.url }}" title="{{ post.title }}">  <font color="green">{{ post.title }}</font></a>
-  </li>
+
+{% assign count = 1 %}
+{% for post in site.posts reversed %}
+    {% assign year = post.date | date: '%Y' %}
+    {% assign nyear = post.next.date | date: '%Y' %}
+    {% if year != nyear %}
+        {% assign count = count | append: ', ' %}
+        {% assign counts = counts | append: count %}
+        {% assign count = 1 %}
+    {% else %}
+        {% assign count = count | plus: 1 %}
+    {% endif %}
 {% endfor %}
-</ul>
+
+{% assign counts = counts | split: ', ' | reverse %}
+{% assign i = 0 %}
+
+{% for post in site.posts %}
+    {% assign year = post.date | date: '%Y' %}
+    {% assign nyear = post.next.date | date: '%Y' %}
+    {% if year != nyear %}
+## {{ post.date | date: '%Y' }} ({{ counts[i] }})
+{:.archive-title}
+        {% assign i = i | plus: 1 %}
+    {% endif %}
+* {{ post.date | date: '%m-%d' }} &raquo; [{{ post.title }}]({{ post.url }} "{{ post.title }}"){:.archive-item-link}
+{% endfor %}
