--- a/2.时间归档.md
+++ b/2.时间归档.md
@@ -31,5 +31,5 @@ header-img: "img/orange.jpg"
 {:.archive-title}
         {% assign i = i | plus: 1 %}
     {% endif %}
-* {{ post.date | date: '%m-%d' }} &raquo; [{{ post.title }}]({{ post.url }} "{{ post.title }}"){:.archive-item-link}
+* {{ post.date | date: '%m-%d' }} &raquo; [{{ post.title }}]({{ post.url }} "<font color="green">{{ post.title }}</font>"){:.archive-item-link}
 {% endfor %}
