--- a/_posts/2018-04-06-搭建常用开发环境.md
+++ b/_posts/2018-04-06-搭建常用开发环境.md
@@ -9,6 +9,9 @@ category: 开发环境搭建
 
 由于目前使用Mac，所以仅供Mac用户参考，等我以后用回自己的Windows再写Windows环境搭建吧(Windows搭建环境实在是太麻烦了呜呜)。  
 
+这篇文章只介绍常用环境的搭建及工具安装，使用方法不过多介绍，感兴趣的可以自行google(也许后面我就写了呢！)。
+
+
 ### 安装JDK  
 1.去Oracle官网下载<a href="http://www.oracle.com/technetwork/java/javase/downloads/jdk8-downloads-2133151.html">JDK1.8</a>.(除非维护老项目否则不要再用jdk7了求求你们了，老项目也强烈建议迁移至jdk8)。  
 2.点开安装包一路点击，安装成功。  
@@ -30,7 +33,96 @@ export CLASSPATH
 6.终端执行```echo $JAVA_HOME```.
 如果显示java安装路径，则配置环境变量成功。
 
+### 安装homebrew
+brew 又叫Homebrew，是Mac OSX上的软件包管理工具，能在Mac中方便的安装软件或者卸载软件， 只需要一个命令， 非常方便
 
+这个东西是我觉得程序员在经济允许的条件下应该抛弃windows的一大原因，安装软件太方便了！
+
+安装方法，在终端执行 
+```
+/usr/bin/ruby -e "$(curl -fsSL https://raw.githubusercontent.com/Homebrew/install/master/install)"
+```
+
+OK!
+
+### git
+
+git作为当前最流行的(我唯一会的)版本管理工具,每次换电脑都是必不可少的。  
+#### 安装：  
+```
+brew install git
+```
+安装完成之后初始化版本库。  
+
+```
+//建立一个自己喜欢的工作目录
+$ mkdir work
+//设置自己的git用户名及邮箱
+$ git config --global user.name "John Doe"
+$ git config --global user.email johndoe@example.com
+//初始化版本库  
+$ git init
+//从远程库拉取代码
+$ git clone xxxxxxxxxx
+```
+
+#### 终端显示当前分支名
+在终端进行git操作时，看不到当前的分支名称总是感觉慌慌的。。所以这个技能必备！
+
+1.终端执行``` vi ~/.bashrc```
+在打开的文件中添加以下代码：
+
+```
+function git_branch {
+   branch="`git branch 2>/dev/null | grep "^\*" | sed -e "s/^\*\ //"`"
+   if [ "${branch}" != "" ];then
+       if [ "${branch}" = "(no branch)" ];then
+           branch="(`git rev-parse --short HEAD`...)"
+       fi
+       echo " ($branch)"
+   fi
+}
+
+export PS1='\u@\h \[\033[01;36m\]\W\[\033[01;32m\]$(git_branch)\[\033[00m\] \$ '
+```
+2.执行加载命令```source ./.bashrc```
+
+3.由于mac不会自动加载.bashrc，所以需要执行```echo "[ -r ~/.bashrc ] && source ~/.bashrc" >> .bash_profile```以使每次开机后自动生效。
+
+#### git 简化命令
+
+经常使用终端来提交代码，每次都要敲下pull，push，branch，status实在是不太优雅，name简单版本来啦。
+
+在终端执行： 
+ 
+```
+$ git config --global alias.co checkout
+$ git config --global alias.br branch
+$ git config --global alias.ci commit
+$ git config --global alias.st status
+$ git config --global alias.ps push
+$ git config --global alias.pl pull
+```
+我经常使用的就是这几个，泥淖而已对其中我设置的别名进行自定义，当然也可以添加更多别名。
+
+#### git 命令自动补全  
+
+有了别名怎么能少得了自动补全呢？
+
+1.使用brew安装bash-completion。
+
+```
+brew install bash-completion
+```
+然后根据安装后的提示将提示内容内容写入到~/.bash_profile中。  
+
+2.将<a href="https://github.com/git/git/tree/master/contrib/completion">git-completion.bash</a>的内容拷贝至文件```~/.git-completion.bash```中(如果没有此文件就新建)。
+
+3.在~/.bashrc中添加```source ~/.git-completion.bash```.
+
+4.重启终端完成。
+
+安装完成git别名和git自动补全后，当你想输入```git pull origin master```,你只需要输入```git pl o[tab] m[tab]```即可。效率提成(装逼程度)大幅提升。
 
 
 
