--- a/_posts/2018-09-15-字符串查找(KMP).md
+++ b/_posts/2018-09-15-字符串查找(KMP).md
@@ -5,7 +5,9 @@ category: 算法
 
 ## 1.字符串查找(kmp)
 
-### 来源: <a href="https://www.lintcode.com/problem/implement-strstr/description">lintcode-字符串查找</a>
+### 来源:   
+<a href="https://www.lintcode.com/problem/implement-strstr/description">lintcode-字符串查找</a>  
+<a href="https://www.lintcode.com/problem/strstr-ii/description">lintcode-字符串查找II</a>
 ### 问题描述
 #### 描述
 对于一个给定的 source 字符串和一个 target 字符串，你应该在 source 字符串中找出 target 字符串出现的第一个位置(从0开始)。如果不存在，则返回 -1。
@@ -197,7 +199,7 @@ KMP算是一个比较通用且效率较为不错(非最优)的实现方法，思
 <br>
 <br>
 <h4>ChangeLog</h4>
-2018-09-15      添加思路及KMP讲解
+2018-09-15      添加思路及KMP讲解  
 2018-09-16      添加实现代码
 <br>
 <br>
