[尾部的0修复排版]

--- a/_posts/2018-09-15-尾部的0&小老鼠喝药.md
+++ b/_posts/2018-09-15-尾部的0&小老鼠喝药.md
@@ -22,12 +22,12 @@ O(logN)的时间复杂度
 
 ### 解决思路
 
-1.首先排除计算结果然后数末尾的0，一来太low了，二来开销太大并不符合题目中O(logN)的时间复杂度要求。
+1. 首先排除计算结果然后数末尾的0，一来太low了，二来开销太大并不符合题目中O(logN)的时间复杂度要求。
 
-2.分析出现0的原因，直接原因就是与10，100等相乘，同时也有类似于5*2或者5*4这样的。而10，100等都可以使用5乘以偶数得到。
+2. 分析出现0的原因，直接原因就是与10，100等相乘，同时也有类似于5*2或者5*4这样的。而10，100等都可以使用5乘以偶数得到。
 因此得出结论：产生0的成因是：5 * 偶数。
 
-3.5的倍数都包含5，5的数列：
+3. 5的倍数都包含5，5的数列：
 ```
 5,10,15,20...
 ```
@@ -37,7 +37,7 @@ O(logN)的时间复杂度
 ```
 可见，偶数出现的频率远大于5及其倍数，因此可以默认为：出现一个5，末尾则会出现一个0.
 
-3.5的平方，立方等含有更多的5，应多次计算。
+4. 5的平方，立方等含有更多的5，应多次计算。
 
 
 因此就有解法1：
