重载重写的区别

--- a/_posts/2018-03-07-java-面试知识点合集.md
+++ b/_posts/2018-03-07-java-面试知识点合集.md
@@ -17,6 +17,10 @@ category: java
      	- <a href="#1.1.5">5.java的基础类型</a>  
      	- <a href="#1.1.6">6.Integer和int的区别，Integer的缓存范围</a>  
      	- <a href="#1.1.7">7.包装类，装箱与拆箱</a>
+      - <a href="#1.1.8">8.String,StringBuilder,StringBuffer</a>
+      - <a href="#1.1.9">9.重写和重载的区别</a>
+
+
 
 <h2>正文</h2>
 <h3>一、基础篇</h3>
@@ -219,3 +223,138 @@ Integer sum = 0;
 这个操作中，+操作并不适用于Integer对象，因此会进行自动拆箱，而拿到+的结果后又会装箱为Integer。在这个过程中，会创建几千个无用的对象，降低程序的性能。因此应尽量避免。  
 
 总的来说，自动装箱和拆箱着实为开发者带来了很大的方便，但是在使用时也是需要格外留意，避免引起出现文章提到的问题。
+
+<h5 id="1.1.8">8.String,StringBuilder,StringBuffer</h5>
+
+这个题目我单独写了一片博文用来分析，见<a href="{{ site.baseurl }}/源码阅读/2018/09/09/String-StringBuilder-StringBuffer异同/">2018-09-09-String-StringBuilder-StringBuffer异同.md</>
+
+
+
+<h5 id="1.1.9">9.重写和重载的区别</h5>
+
+其实我们要明白，这两个根本不是相似的概念，只是名字相近罢了。
+
+<font color="red">重写</font>
+
+1. 重写发生在继承关系当中，当父类中指定了一个方法，子类可以更加具体的重写他。
+例如：
+
+```java
+//动物有叫的方法，接受次数n，输出n次叫声
+public class Animal {
+
+  void noise(int n ){
+    for (int i =0 ;i < n;i++){
+      System.out.print("noise");
+    }
+  }
+
+  //新建一个动物，指向一条狗，让他叫，得到结果为汪汪汪
+  public static void main (String [] args){
+    Animal animal = new Dog();
+    animal.noise(10);
+  }
+
+}
+
+//狗是一种动物，具体的实现了叫声为汪汪汪
+class Dog extends Animal {
+  void noise(int n){
+    for (int i =0 ;i < n;i++){
+      System.out.print("wang");
+    }
+
+  }
+}
+```
+在该例中，Dog类重写了Animal类的方法，将叫声更为具体化，当拿到一条狗，我们只需要知道它是个动物，就可以让他叫，叫声依它自己的实现而定。
+
+<font color="red">重载</font>
+
+重载发生在一个类中，可以使用两个名字相同的方法，来对不同的输入进行不同的反应，这就是重载。
+
+例如：
+
+```java
+//人，比较聪明
+public class Person {
+
+  //当你传入数字，人就会根据你的数字发出hHA的声音
+  void noise(int n) {
+    for (int i = 0; i < n; i++) {
+      System.out.print("HA");
+    }
+
+  }
+
+  //当你传入字符串，人就会把他念出来
+  void noise(String noise) {
+    System.out.print(noise);
+  }
+
+  public static void main(String[] args) {
+    Person person = new Person();
+    person.noise(10);
+    person.noise("HEHE");
+  }
+}
+```
+
+上面两个例子说明了重载和重写在日程编码过程中的应用。
+
+接下来说一下他们各自的限制。
+
+<font color="red">重写的限制</font>
+
+(一) 父类方法的参数列表必须完全与被子类重写的方法的参数列表相同，否则不能称其为重写而是重载。  
+
+(二) 父类的返回类型必须与被子类重写的方法返回类型相同，否则不能称其为重写而是重载。  
+
+(三) Java中规定，被子类重写的方法不能拥有比父类方法更加严格的访问权限。
+
+(四) 在继承过程中如果父类当中的方法抛出异常，那么在子类中重写父类的该方法时，也要抛出异常，且只能抛出父类异常的子类，即：异常不能大于父类。
+
+<font color="red">重载的限制</font>  
+
+（一）在使用重载时只能通过不同的参数列表，必须具有不同的参数列表。
+
+（二）不能通过访问权限、返回类型、抛出的异常进行重载。
+
+（三）方法的异常类型和数目不会对重载造成影响。
+
+（四）可以有不同的返回类型，只要参数列表不同就可以了。
+
+（五）可以有不同的访问修饰符。
+
+（六）可以抛出不同的异常。
+
+<font color="red">尤其注意：参数的数量，顺序，类型才可以构成重载，仅有返回值不同时不构成重载</font>
+
+<br>
+
+<font color="red">共性</font>  
+
+<br>
+**在我看来，他们的共性就是都可以在一定程度上实现多态吧。**
+
+
+
+
+
+<br>
+<br>
+<br>
+<br>
+<h4>ChangeLog</h4>
+2018-03-20 完成前面7点
+2018-09-26 完成重载重写
+<br>
+<br>
+
+**以上皆为个人所思所得，如有错误欢迎评论区指正。**
+
+**欢迎转载，烦请署名并保留原文链接。**
+
+**联系邮箱：huyanshi2580@gmail.com**
+
+**更多学习笔记见个人博客------><a href="{{ site.baseurl }}/">呼延十</a>**
