--- a/1.分类查看.md
+++ b/1.分类查看.md
@@ -3,7 +3,7 @@ layout: page
 title: "分类查看"
 description: "一个文章属于多个分类是客观需要,不是为了显得写的很多！"
 header-img: "img/zhihu.jpg"
-background-color: "#395692"
+background-color: #395692
 ---
 
 <div>
