--- a/3.关于.md
+++ b/3.关于.md
@@ -2,7 +2,7 @@
 layout: page
 title: "关于"
 description: "呼延十博客的介绍" 
-header-img: "img/green.jpg"
+background-color: "#458d5b"
 ---
 
 起初我是不写博客的，工作中的许多知识，发现都是用备忘录随手记载。  
