添加flyway的使用

--- a/_posts/2018-09-05-使用jekyll搭建个人博客.md
+++ b/_posts/2018-09-05-使用jekyll搭建个人博客.md
@@ -47,7 +47,7 @@ category: 开发环境搭建
 可以首先领取阿里云的一个月免费试用，等操作熟悉，确定继续试用后再进行续费（第一年99，后续每年600多700），同事如果你是学生，可以参加阿里云的云翼计划，更加划算。  
 
 购买成功后，登录自己创尔账户，进入阿里云控制台，选择自己的服务器
-![服务器](http://pem6cy6sv.bkt.clouddn.com/markdown-img-paste-20180924172459837.png)
+![服务器](http://img.couplecoders.tech/markdown-img-paste-20180924172459837.png)
 在右侧点击远程连接，输入自己的密码。  
 
 这一步如果是windows平台，可以使用xshell等工具，mac平台可以直接在命令行输入：
@@ -116,7 +116,7 @@ kill -9 jekyll服务进程编号
 ### 5.2域名  
 
 域名购买成功后，需要再域名购买商提供的网站控制台修改域名解析，将域名解析到你的服务器地址，同时，国内域名购买后需要备案，
-![beian](http://pem6cy6sv.bkt.clouddn.com/markdown-img-paste-20180924175726887.png)
+![beian](http://img.couplecoders.tech/markdown-img-paste-20180924175726887.png)
 登录阿里云网站后点击备案，按照教程一步步操作就好。
 
 **这里强烈建议大家购买后尽快进行备案**
@@ -165,7 +165,7 @@ cd /etc/nginx
 vi nginx.conf
 ```
 在 http 后的大括号内添加图片内容：
-![](http://pem6cy6sv.bkt.clouddn.com/markdown-img-paste-20180924183417326.png)
+![](http://img.couplecoders.tech/markdown-img-paste-20180924183417326.png)
 
 其中
 
@@ -224,7 +224,7 @@ PS：不要使用git init --bare，这个是建立裸库的，也就是服务器
 
 通过git init 初始化的仓库，由于存在工作区，因此不允许push，防止工作区混乱，因此需要在/blog/.git/config文件内添加下图内容。
 
-![](http://pem6cy6sv.bkt.clouddn.com/markdown-img-paste-20180924191138425.png)
+![](http://img.couplecoders.tech/markdown-img-paste-20180924191138425.png)
 
 该内容作用为允许其他仓库向此仓库push。
 
@@ -355,7 +355,7 @@ Atom，我目前在用的有Mac版本，Ubuntu版本，都比较好用。
 
 Atom相比于其他的编辑器，有一个很不错的项目展示系统，类似于这样：
 
-![](http://pem6cy6sv.bkt.clouddn.com/WX20180925-000235.png)
+![](http://img.couplecoders.tech/WX20180925-000235.png)
 可以很方便的看到当前目录下的文件，尤其是写博客时，方便管理。
 
 
