--- a/_posts/2018-09-29-代码优化的方法.md
+++ b/_posts/2018-09-29-代码优化的方法.md
@@ -9,7 +9,7 @@ category: 编程随想
 
 在代码的review过程中，推荐使用一些gitlab，gerrit等工具来查看自己的代码，因为git工具会将你的代码改动更加直观的展示出来，而在编译器中，我们看到的更多是整体的代码，容易分散注意力。
 
-代码的乱，乱在哪里，一是程序本身的属性不够好，如扩展性，健壮性等。而是可读性不够好，不能很直观的读懂代码。下面是针对这两个方面的几个小方法。
+代码的乱，乱在哪里，一是程序本身的属性不够好，如扩展性，健壮性等。二是可读性不够好，不能很直观的读懂代码。下面是针对这两个方面的几个小方法。
 
 ### 程序本身的提高
 
@@ -203,7 +203,6 @@ int color = COLOR_RED;
 2018-09-29 完成
 <br>
 <br>
-
 
 **以上皆为个人所思所得，如有错误欢迎评论区指正。**
 
