--- a/_posts/2018-03-07-java-面试知识点合集.md
+++ b/_posts/2018-03-07-java-面试知识点合集.md
@@ -226,7 +226,7 @@ Integer sum = 0;
 
 <h5 id="1.1.8">8.String,StringBuilder,StringBuffer</h5>
 
-这个题目我单独写了一片博文用来分析，见<a href="{{ site.baseurl }}/源码阅读/2018/09/09/String-StringBuilder-StringBuffer异同/">2018-09-09-String-StringBuilder-StringBuffer异同.md</>
+这个题目我单独写了一篇博文用来分析，见<a href="{{ site.baseurl }}/源码阅读/2018/09/09/String-StringBuilder-StringBuffer异同/">2018-09-09-String-StringBuilder-StringBuffer异同.md</>
 
 
 
