--- a/_posts/2018-11-02-Java中-JSON的使用.md
+++ b/_posts/2018-11-02-Java中-JSON的使用.md
@@ -3,7 +3,7 @@ layout: post
 category: [开发者手册]
 ---
 
-# Java Json
+# Java JSON
 
 本章节我们将为大家介绍如何在 Java 语言中使用 JSON。
 
@@ -66,9 +66,9 @@ public void testJson() {
 
 ### 解码
 
-从 JSON 对象到 Java 的解码过程如下：
+从 JSON 对象到 Java 变量的解码过程如下：
 
-```Java
+```java
 public void testJson2() {
 
   JSONObject object = JSONObject
