--- a/_posts/2018-11-04-二叉树介绍及其前中后遍历实现.md
+++ b/_posts/2018-11-04-二叉树介绍及其前中后遍历实现.md
@@ -3,7 +3,7 @@ layout: post
 category: [数据结构,算法]
 ---
 
-本文示例代码已上传github，可直<a href="https://github.com/HuBlanker/someprogram/blob/master/src/main/java/tree/binarytree/BinaryTree.java">接点击查看</a>
+本文示例代码已上传github，可直接<a href="https://github.com/HuBlanker/someprogram/blob/master/src/main/java/tree/binarytree/BinaryTree.java">点击查看</a>
 ## 前言
 前一阵子在学习HashMap的时候，知道了在java8之后的HashMap使用数组+链表+红黑树的结构来实现，看代码的时候百思不得其解。
 
