--- a/_posts/开发环境/2018-10-17-Docker初步学习.md
+++ b/_posts/开发环境/2018-10-17-Docker初步学习.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-category: [开发环境搭建，开发者手册]
+category: [开发环境搭建,开发者手册]
 ---
 
 公司的服务都使用Docker部署，虽然这块和我关系不大，但是我在测试环境启动时，老是会报错，所以我打算学习一下基本的Docker知识，方便自己在测试环境调试。
