--- a/2.时间归档.md
+++ b/2.时间归档.md
@@ -6,30 +6,70 @@ background-color: "#e58172"
 ---
 
 
+{% for post in paginator.posts %}
+<div class="post-preview">
+    <a href="{{ post.url | prepend: site.baseurl }}">
+        <h2 class="post-title">
+            {{ post.title }}
+        </h2>
+        {% if post.subtitle %}
+        <h3 class="post-subtitle">
+            {{ post.subtitle }}
+        </h3>
+        {% endif %}
+        <div class="post-content-preview">
+            {{ post.content | strip_html | truncate:150 }}
+        </div>
+    </a>
+    <p class="post-meta">Posted by {% if post.author %}{{ post.author }}{% else %}{{ site.title }}{% endif %} on {{ post.date | date: "%B %-d, %Y" }}</p>
+</div>
 
-{% assign count = 1 %}
-{% for post in site.posts reversed %}
-    {% assign year = post.date | date: '%Y' %}
-    {% assign nyear = post.next.date | date: '%Y' %}
-    {% if year != nyear %}
-        {% assign count = count | append: ', ' %}
-        {% assign counts = counts | append: count %}
-        {% assign count = 1 %}
-    {% else %}
-        {% assign count = count | plus: 1 %}
-    {% endif %}
+<hr>
 {% endfor %}
 
-{% assign counts = counts | split: ', ' | reverse %}
-{% assign i = 0 %}
-
-{% for post in site.posts %}
-    {% assign year = post.date | date: '%Y' %}
-    {% assign nyear = post.next.date | date: '%Y' %}
-    {% if year != nyear %}
-## {{ post.date | date: '%Y' }} ({{ counts[i] }})
-{:.archive-title}
-        {% assign i = i | plus: 1 %}
-    {% endif %}
-* {{ post.date | date: '%m-%d' }} &raquo;   <a href="{{ post.url }}" title="{{ post.title }}">  <font color="green">{{ post.title }}</font></a>
+<!-- Pager -->
+<!-- 分页链接 -->
+<h2 style="text-align:center;">
+{% if paginator.page == 1 %}
+<span style="margin-right:15px;"><i><b>首页</b></i></span>
+{% endif %}
+{% if  paginator.total_pages >1 %}
+{% if paginator.previous_page %}
+<a href="/" title="首页">首页</a>
+<a href="{{ paginator.previous_page_path | prepend: site.baseurl | replace: '//', '/' }}" title="上一页">
+<span class="fa fa-backward" style="padding:10px;"></span></a>
+{% endif %}
+{% for page in (1..paginator.total_pages) %}
+{% if page == paginator.page %}
+<select onChange="location.replace(this.options[this.selectedIndex].value)">
+<option>
+第
+{{ paginator.page }}
+ /
+{{ paginator.total_pages }}
+页
+</option>
+{% assign page_num = 1 %}
+<option value="/">跳至:首页</option>
+{% for page in (1..paginator.total_pages) %}
+{% assign page_num = page_num | plus: 1 %}
+{% if page_num < paginator.total_pages %}
+<option value="/page{{ page_num }}/">跳至:第 {{ page_num }} 页</option>
+{% endif %}
 {% endfor %}
+<option value="/page{{ paginator.total_pages }}">跳至:尾页</option>
+</select>
+{% elsif page == 1 %}
+{% else %}
+{% endif %}
+{% endfor %}
+{% if paginator.next_page %}
+<a href="{{ paginator.next_page_path | prepend: site.baseurl | replace: '//', '/' }}" title="下一页">
+<i class="fa fa-forward" style="padding:10px;"></i></a>
+<a href="/page{{ paginator.total_pages }}/" title="尾页">尾页</a>
+{% endif %}
+{% if paginator.page == paginator.total_pages %}
+<span style="margin-left:15px;"><i><b>已达尾页</b></i></span>
+{% endif %}
+{% endif %}
+</h2>
