--- a/2.时间归档.md
+++ b/2.时间归档.md
@@ -4,33 +4,88 @@ title: "时间归档"
 description: "时间顺序排列文章"
 background-color: "#e58172"
 ---
+---
+title: Archive
+layout: default
+description: keep hungry keep foolish
+header-img: "img/tag-bg.jpg"
+---
+
+<!-- 
+Credits: this page shamelessly borrowed a lot from:
+https://github.com/kitian616/jekyll-TeXt-theme
+-->
+<!-- Page Header -->
+{% include intro-header.html type='page' short=true %}
+
+<!-- Main Content -->
+<div class="container">
+    <div class="row">
+        <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
+            <!-- categories (as filter) -->
+            <div id='tag_cloud' class="categories categories-sup js-categories">
+                <a class="tag-button--all" data-encode="">
+                    Show All
+                    <sup>{{site.posts.size}}</sup>
+                </a>
+
+                {% capture categories %}
+                {% for tag in site.categories %}
+                <a data-sort="{{ site.posts.size | minus: tag[1].size | prepend: '0000' | slice: -4, 4 }}"
+                    data-encode="{{ tag[0] | strip | url_encode }}"
+                    class="tag-button"
+                    title="{{ tag[0] }}" rel="{{ tag[1].size }}">
+                    {{ tag[0] }}
+                    <sup>{{tag[1].size}}</sup>
+                </a>
+                {% endfor %}
+                {% endcapture %}
+        {{ categories | split:'</a>' | sort | join:'</a>' }}
+            </div>
+
+            <!-- Article List -->
+            <div class="mini-post-list js-result d-none">
+            {%- assign _sorted_list = site.posts -%}
+            {%- assign _sorted_list = _sorted_list | sort: 'date' -%}
+            {%- assign _sorted_list = _sorted_list | reverse -%}
 
 
+            {%- for _article in _sorted_list -%}
+                {%- assign _categories = '' -%}
+                {%- for _tag in _article.categories -%}
+                    {%- assign _tag_encode = _tag | strip | url_encode -%}
+                    {%- if forloop.last -%}
+                        {%- assign _categories = _categories | append: _tag_encode -%}
+                    {%- else -%}
+                        {%- assign _categories = _categories | append: _tag_encode | append: ',' -%}
+                    {%- endif -%}
+                {%- endfor -%}
 
-{% assign count = 1 %}
-{% for post in site.posts reversed %}
-    {% assign year = post.date | date: '%Y' %}
-    {% assign nyear = post.next.date | date: '%Y' %}
-    {% if year != nyear %}
-        {% assign count = count | append: ', ' %}
-        {% assign counts = counts | append: count %}
-        {% assign count = 1 %}
-    {% else %}
-        {% assign count = count | plus: 1 %}
-    {% endif %}
-{% endfor %}
+            {% comment %} group by year {% endcomment %}
+            {%- assign _currentdate = _article.date | date: '%Y' -%}
+            {%- if _currentdate != _date -%}
+                {%- unless forloop.first -%}</section>{%- endunless -%}
+                <section>
+                <span class="fa listing-seperator">
+                    <span class="tag-text">{{ _currentdate }}</span>
+                </span>
+                {%- assign _date = _currentdate -%}
+            {%- endif -%}
 
-{% assign counts = counts | split: ', ' | reverse %}
-{% assign i = 0 %}
-
-{% for post in site.posts %}
-    {% assign year = post.date | date: '%Y' %}
-    {% assign nyear = post.next.date | date: '%Y' %}
-    {% if year != nyear %}
-## {{ post.date | date: '%Y' }} ({{ counts[i] }})
-{:.archive-title}
-        {% assign i = i | plus: 1 %}
-    {% endif %}
-* {{ post.date | date: '%m-%d' }} &raquo;   <a href="{{ post.url }}" title="{{ post.title }}">  <font color="green">{{ post.title }}</font></a>
-{% endfor %}
-
+                <div class="post-preview item" data-categories="{{ _categories }}">
+                    <a href="{{ _article.url | prepend: site.baseurl }}">
+                        <h2 class="post-title">
+                            {{ _article.title }}
+                        </h2>
+                        {% if _article.subtitle %}
+                        <h3 class="post-subtitle">
+                            {{ _article.subtitle }}
+                        </h3>
+                        {% endif %}
+                    </a>
+                    <hr>
+                </div>
+            {% endfor %}
+        </div>
+    </div>
+</div>
