--- a/2.时间归档.md
+++ b/2.时间归档.md
@@ -22,15 +22,15 @@ https://github.com/kitian616/jekyll-TeXt-theme
 <div class="container">
     <div class="row">
         <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
-            <!-- categories (as filter) -->
-            <div id='tag_cloud' class="categories categories-sup js-categories">
+            <!-- Tags (as filter) -->
+            <div id='tag_cloud' class="tags tags-sup js-tags">
                 <a class="tag-button--all" data-encode="">
                     Show All
                     <sup>{{site.posts.size}}</sup>
                 </a>
 
-                {% capture categories %}
-                {% for tag in site.categories %}
+                {% capture tags %}
+                {% for tag in site.tags %}
                 <a data-sort="{{ site.posts.size | minus: tag[1].size | prepend: '0000' | slice: -4, 4 }}"
                     data-encode="{{ tag[0] | strip | url_encode }}"
                     class="tag-button"
@@ -40,7 +40,7 @@ https://github.com/kitian616/jekyll-TeXt-theme
                 </a>
                 {% endfor %}
                 {% endcapture %}
-        {{ categories | split:'</a>' | sort | join:'</a>' }}
+        {{ tags | split:'</a>' | sort | join:'</a>' }}
             </div>
 
             <!-- Article List -->
@@ -51,13 +51,13 @@ https://github.com/kitian616/jekyll-TeXt-theme
 
 
             {%- for _article in _sorted_list -%}
-                {%- assign _categories = '' -%}
-                {%- for _tag in _article.categories -%}
+                {%- assign _tags = '' -%}
+                {%- for _tag in _article.tags -%}
                     {%- assign _tag_encode = _tag | strip | url_encode -%}
                     {%- if forloop.last -%}
-                        {%- assign _categories = _categories | append: _tag_encode -%}
+                        {%- assign _tags = _tags | append: _tag_encode -%}
                     {%- else -%}
-                        {%- assign _categories = _categories | append: _tag_encode | append: ',' -%}
+                        {%- assign _tags = _tags | append: _tag_encode | append: ',' -%}
                     {%- endif -%}
                 {%- endfor -%}
 
@@ -72,7 +72,7 @@ https://github.com/kitian616/jekyll-TeXt-theme
                 {%- assign _date = _currentdate -%}
             {%- endif -%}
 
-                <div class="post-preview item" data-categories="{{ _categories }}">
+                <div class="post-preview item" data-tags="{{ _tags }}">
                     <a href="{{ _article.url | prepend: site.baseurl }}">
                         <h2 class="post-title">
                             {{ _article.title }}
