--- a/2.时间归档.md
+++ b/2.时间归档.md
@@ -1,91 +1,25 @@
----
-layout: page
-title: "时间归档"
-description: "时间顺序排列文章"
-background-color: "#e58172"
----
----
-title: Archive
-layout: default
-description: keep hungry keep foolish
-header-img: "img/tag-bg.jpg"
+------
+layout: categories
+title: Categories
+description: 哈哈，你找到了我的文章基因库
+keywords: 分类
+comments: false
+menu: 分类
+permalink: /categories/
 ---
 
-<!-- 
-Credits: this page shamelessly borrowed a lot from:
-https://github.com/kitian616/jekyll-TeXt-theme
--->
-<!-- Page Header -->
-{% include intro-header.html type='page' short=true %}
-
-<!-- Main Content -->
-<div class="container">
-    <div class="row">
-        <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
-            <!-- Tags (as filter) -->
-            <div id='tag_cloud' class="tags tags-sup js-tags">
-                <a class="tag-button--all" data-encode="">
-                    Show All
-                    <sup>{{site.posts.size}}</sup>
-                </a>
-
-                {% capture tags %}
-                {% for tag in site.tags %}
-                <a data-sort="{{ site.posts.size | minus: tag[1].size | prepend: '0000' | slice: -4, 4 }}"
-                    data-encode="{{ tag[0] | strip | url_encode }}"
-                    class="tag-button"
-                    title="{{ tag[0] }}" rel="{{ tag[1].size }}">
-                    {{ tag[0] }}
-                    <sup>{{tag[1].size}}</sup>
-                </a>
-                {% endfor %}
-                {% endcapture %}
-        {{ tags | split:'</a>' | sort | join:'</a>' }}
-            </div>
-
-            <!-- Article List -->
-            <div class="mini-post-list js-result d-none">
-            {%- assign _sorted_list = site.posts -%}
-            {%- assign _sorted_list = _sorted_list | sort: 'date' -%}
-            {%- assign _sorted_list = _sorted_list | reverse -%}
-
-
-            {%- for _article in _sorted_list -%}
-                {%- assign _tags = '' -%}
-                {%- for _tag in _article.tags -%}
-                    {%- assign _tag_encode = _tag | strip | url_encode -%}
-                    {%- if forloop.last -%}
-                        {%- assign _tags = _tags | append: _tag_encode -%}
-                    {%- else -%}
-                        {%- assign _tags = _tags | append: _tag_encode | append: ',' -%}
-                    {%- endif -%}
-                {%- endfor -%}
-
-            {% comment %} group by year {% endcomment %}
-            {%- assign _currentdate = _article.date | date: '%Y' -%}
-            {%- if _currentdate != _date -%}
-                {%- unless forloop.first -%}</section>{%- endunless -%}
-                <section>
-                <span class="fa listing-seperator">
-                    <span class="tag-text">{{ _currentdate }}</span>
-                </span>
-                {%- assign _date = _currentdate -%}
-            {%- endif -%}
-
-                <div class="post-preview item" data-tags="{{ _tags }}">
-                    <a href="{{ _article.url | prepend: site.baseurl }}">
-                        <h2 class="post-title">
-                            {{ _article.title }}
-                        </h2>
-                        {% if _article.subtitle %}
-                        <h3 class="post-subtitle">
-                            {{ _article.subtitle }}
-                        </h3>
-                        {% endif %}
-                    </a>
-                    <hr>
-                </div>
-            {% endfor %}
-        </div>
-    </div>
-</div>
+<section class="container posts-content">
+{% assign sorted_categories = site.categories | sort %}
+{% for category in sorted_categories %}
+<h3>{{ category | first }}</h3>
+<ol class="posts-list" id="{{ category[0] }}">
+{% for post in category.last %}
+<li class="posts-list-item">
+<span class="posts-list-meta">{{ post.date | date:"%Y-%m-%d" }}</span>
+<a class="posts-list-name" href="{{ site.url }}{{ post.url }}">{{ post.title }}</a>
+</li>
+{% endfor %}
+</ol>
+{% endfor %}
+</section>
+<!-- /section.content -->
