--- a/_posts/java/2018-11-18-抽象类和接口的区别.md
+++ b/_posts/java/2018-11-18-抽象类和接口的区别.md
@@ -5,7 +5,7 @@ category: java面试
 
 面试中经常会问到这个问题,那么我们到底应该怎么回答呢?
 
-##语法方面
+## 语法方面
 
 首先,在java语言中,抽象类和接口在语法方面就是有一些区别的,总结整理如下:
 
@@ -37,7 +37,7 @@ category: java面试
 假如,现在要设计一个Door的类.我们通过两种方式都可以实现.
 
 ```java
-抽象类
+//抽象类
 abstract class AbstractDoor {
 
   public abstract void open();
