--- a/_posts/http/2018-03-26-http-协议.md
+++ b/_posts/http/2018-03-26-http-协议.md
@@ -1,6 +1,8 @@
 ---
 layout: post
 category: Http
+tags:
+  - Http
 ---
 
 HTTP(Hypertext Transfer Protocol),超文本传输协议，他是现代互联网最基本也是最重要的协议。Http协议是无状态的，应用层协议，是web开发的基础。
