--- a/_posts/实际案例/2018-11-14-超简单的shell爬虫示例.md
+++ b/_posts/实际案例/2018-11-14-超简单的shell爬虫示例.md
@@ -1,6 +1,9 @@
 ---
 layout: post
-category: [linux,实际问题解决]
+category: [Linux,实际问题解决]
+tags:
+  - 实际问题解决
+  - Linux
 ---
 
 首先，我并不太会爬虫，shell编程也是一知半解，这次纯粹是需求驱动。
