--- a/_posts/开发环境/2018-04-06-搭建常用开发环境.md
+++ b/_posts/开发环境/2018-04-06-搭建常用开发环境.md
@@ -1,6 +1,8 @@
---- 
+---
 layout: post
 category: 开发环境搭建
+tags:
+  - 开发环境搭建
 ---
 
 前两天犯了一个愚蠢的错误，我的bazel环境出了一点点小问题，然后被我误操作删除了一个C的头文件彻底跑不起来了。在google很久后终于在github上找到一个解决办法，执行一个rm命令，当时我以为这个命令的效果会和maven上的clean然后重新build就ok了。是的，我的电脑被删除干净了。  
