--- a/_posts/开发者手册/2018-09-29-代码优化的方法.md
+++ b/_posts/开发者手册/2018-09-29-代码优化的方法.md
@@ -1,6 +1,8 @@
 ---
 layout: post
-category: 编程随想
+category: 开发者手册
+tags:
+  - 开发者手册
 ---
 
 上一篇博客说到最近做了一个大一些的需求，等需求完成后代码非常的凌乱，自己重构(整理了一波)，在整理过程中，有一点对于如何优化代码的想法，特此记录一下。
