--- a/_posts/数据结构和算法/2018-11-04-二叉树介绍及其前中后遍历实现.md
+++ b/_posts/数据结构和算法/2018-11-04-二叉树介绍及其前中后遍历实现.md
@@ -1,6 +1,9 @@
 ---
 layout: post
 category: [数据结构,算法]
+tags:
+  - 算法
+  - 数据结构
 ---
 
 本文示例代码已上传github，可直接<a href="https://github.com/HuBlanker/someprogram/blob/master/src/main/java/tree/binarytree/BinaryTree.java">点击查看</a>
