--- a/_posts/java/2018-10-16-HashMap源码阅读.md
+++ b/_posts/java/2018-10-16-HashMap源码阅读.md
@@ -1,6 +1,9 @@
 ---
 layout: post
-category: 源码阅读
+category: [源码阅读,java]
+tags:
+  - java
+  - 源码阅读
 ---
 
 HashMap是什么想必大家都是知道的，日常开发中经常使用，而且常驻于笔试题目及面试中，那么今天将从源码的角度来深入理解一下HashMap。
