--- a/_posts/java/2018-11-11-Java的键盘输入方法.md
+++ b/_posts/java/2018-11-11-Java的键盘输入方法.md
@@ -1,6 +1,8 @@
 ---
 layout: post
 category: java
+tags:
+  - java
 ---
 
 在工作中其实很少用到java读取键盘输入的情况，但是在各种网站刷题时却经常碰到，同时，在日常写一些测试方法的时候，如果通过键盘读取输入也是十分方便的，因此简要的做一个总结，方便后续查看及使用。
