--- a/_posts/java/2018-03-07-java-面试知识点合集.md
+++ b/_posts/java/2018-03-07-java-面试知识点合集.md
@@ -1,8 +1,8 @@
 ---
 layout: post
-category: java面试
+category: Java面试
 tags:
-  - java面试
+  - Java面试
 ---
 
 摘要：网上java面试知识杂乱而繁多，每次想看的时候总会挑挑拣拣许多时间就过去了，所以我对其进行一次学习，整理。  
