--- a/_posts/java/2018-03-10-java8-接口的静态方法和默认方法.md
+++ b/_posts/java/2018-03-10-java8-接口的静态方法和默认方法.md
@@ -2,8 +2,8 @@
 layout: post
 category: [java8,java]
 tags:
-  - java
-  - java8
+  - Java
+  - Java8
 ---
 java8的接口中可以有default方法及static方法。  
 普通的抽象方法不可以有实现，实现此接口的类必须实现所有抽象方法。  
