--- a/_posts/数据结构和算法/2018-11-26-[每日一题]翻转链表.md
+++ b/_posts/数据结构和算法/2018-11-26-[每日一题]翻转链表.md
@@ -11,7 +11,7 @@ tags:
 ---
 
 ### 来源:   
-<a hrff="https://www.lintcode.com/problem/reverse-linked-list/description">lintcode-翻转链表</a>  
+<a href="https://www.lintcode.com/problem/reverse-linked-list/description">lintcode-翻转链表</a>  
 
 ## 描述
 翻转一个链表
