--- a/_posts/数据结构和算法/2018-11-27-[每日一题]最少划分子串.md
+++ b/_posts/数据结构和算法/2018-11-27-[每日一题]最少划分子串.md
@@ -11,7 +11,7 @@ tags:
 ---
 
 ### 来源:   
-<a hrff="https://www.lintcode.com/problem/least-substring/description">lintcode-最少划分子串</a>  
+<a href="https://www.lintcode.com/problem/least-substring/description">lintcode-最少划分子串</a>  
 
 ## 描述
 给定一个包含n个小写字母的字符串s，要求将字符串划分成若干个连续子串，子串中的字母类型相同，同时子串的字母个数不超过k，输出最少划分的子串数量。
