--- a/_posts/数据结构和算法/2018-11-28-[每日一题]投资结果.md
+++ b/_posts/数据结构和算法/2018-11-28-[每日一题]投资结果.md
@@ -10,7 +10,7 @@ tags:
 ---
 
 ### 来源:   
-<a hrff="https://www.lintcode.com/problem/the-result-of-investment/description">lintcode-投资结果</a>  
+<a href="https://www.lintcode.com/problem/the-result-of-investment/description">lintcode-投资结果</a>  
 
 ## 描述
 给定一个列表funds表示投资人每次的投资额。现在有三个公司A, B, C,它们的初始资金分别为a,b,c。投资人每次投资时会对当前资金最少的公司进行投资（当有多个公司资金相同时，投资人会对编号最小的公司进行投资）。返回A, B, C三家公司最后的资金。
