--- a/_posts/数据结构和算法/2018-12-05-[每日一题]机器人能否返回原点.md
+++ b/_posts/数据结构和算法/2018-12-05-[每日一题]机器人能否返回原点.md
@@ -8,7 +8,7 @@ tags:
   - LintCode
 ---
 ### 来源:   
-<a hrff="https://www.lintcode.com/problem/judge-route-circle/description">lintcode-机器人能否返回原点</a>  
+<a href="https://www.lintcode.com/problem/judge-route-circle/description">lintcode-机器人能否返回原点</a>  
 
 ## 描述
 最初，机器人位于(0, 0)处。 给定一系列动作，判断该机器人的移动轨迹是否是一个环，这意味着它最终会回到原来的位置。
