--- a/_posts/数据结构和算法/2018-12-08-[每日一题]最常公共前缀.md
+++ b/_posts/数据结构和算法/2018-12-08-[每日一题]最常公共前缀.md
@@ -8,7 +8,7 @@ tags:
   - LintCode
 ---
 ### 来源:   
-<a hrff="https://www.lintcode.com/problem/longest-common-prefix/description">lintcode-最常公共前缀</a>  
+<a href="https://www.lintcode.com/problem/longest-common-prefix/description">lintcode-最常公共前缀</a>  
 
 ## 描述
 给k个字符串，求出他们的最长公共前缀(LCP)
