--- a/_posts/数据结构和算法/2018-12-12-[每日一题]回文排列2.md
+++ b/_posts/数据结构和算法/2018-12-12-[每日一题]回文排列2.md
@@ -21,7 +21,7 @@ tags:
 
 ## 解题思路:
 
-这道题在我看来就是<a href="{{ site.baseurl }}/数据结构及算法/每日一题/2018/12/08/每日一题-回文排列/">回文排列</a>及<a href="{{ site.baseurl }}/数据结构及算法/每日一题/2018/12/08/每日一题-全排列问题/"></a>全排列的组合题.
+这道题在我看来就是<a href="{{ site.baseurl }}/数据结构及算法/每日一题/2018/12/10/每日一题-回文排列/">回文排列</a>及<a href="{{ site.baseurl }}/每日一题/2018/12/11/每日一题-全排列问题/">全排列</a>的组合题.
 
 首先,对每个出现的字符计数,判断当前字符传可以是回文序列吗?
 
