--- a/_posts/java/集合/2018-10-16-HashMap源码阅读.md
+++ b/_posts/java/集合/2018-10-16-HashMap源码阅读.md
@@ -4,6 +4,7 @@ category: [源码阅读,java]
 tags:
   - Java
   - 源码阅读
+  - Java集合
 ---
 
 HashMap是什么想必大家都是知道的，日常开发中经常使用，而且常驻于笔试题目及面试中，那么今天将从源码的角度来深入理解一下HashMap。
