--- a/_posts/database/MySQL/2018-10-16-Mysql常用命令(二)与常用函数.md
+++ b/_posts/database/MySQL/2018-10-16-Mysql常用命令(二)与常用函数.md
@@ -77,7 +77,9 @@ group by substr(from_unixtime(floor(event_timestamp / 1000)),1,10)
 
 直接拿到日期字段。
 
+## 其他函数
 
+<a href="http://www.runoob.com/mysql/mysql-functions.html">菜鸟教程-mysql-函数</a>
 
 
 <br>
